Fixed scrollbar on table because it looked bad and didn't work. Turns out I didn't need it in the first place.

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -136,7 +136,6 @@ main
     background-color: $cardBG;
     border-radius: 20px;
     display: flex;
-    overflow-x: scroll;
     align-items: center;
     transition: all .4s;
     &:hover
